src/App.css
* {
  box-sizing: border-box;
}

.navigation {
  /* Surface */
  margin: 0 auto;
  height: 80px;
  width: 1440px;
  left: 0px;
  top: 0px;
  border-radius: 0px;

  position: absolute;
  left: 0%;
  right: 0%;
  top: 0%;
  bottom: 0%;

  /* --c-white */
  background: #FFFFFF;
  /* display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center; */
}

.navigation__logo {
  position: absolute;
  width: 41px;
  height: 41px;
  left: 699px;
  top: calc(50% - 41px/2 + 4.5px);
}

.navigation__header {
  /* Navigation */
  /* Auto layout */

  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  padding: 0px;

  position: absolute;
  width: 234px;
  height: 56px;
  left: 101px;
  bottom: 0px;
}

.navigation__header_elemet {
  /* Label */
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 120%;
  height: 56px;

  display: flex;
  align-items: center;
  text-align: center;
  text-transform: uppercase;
  text-decoration: none;

  /* --c-text */
  color: #1D1F22;
}

.navigation__header_elemet--selected {
  font-weight: 600;
  color: #5ECE7B;
  border-bottom: 2px solid #5ECE7B;
}

.navigation__actions {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  padding: 0px;
  padding-right: 101px;
  gap: 22px;

  position: absolute;
  width: 204px;
  height: 40px;
  right: 1px;
  top: 23px;
}

.navigation__actions_currency {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 500;
  font-size: 18px;
  line-height: 160%;
  border: 0px;
  outline: 0px;
}

.PLP__container,
.Cart__container {
  margin-top: 160px;
  margin-left: 90px;
  margin-right: 90px;
  display: flex;
  flex-direction: column;
  /* gap: 10px; */
  align-items: flex-start;
  padding: 0px;
}

.PLP__container .PLP__container_name {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 400;
  font-size: 42px;
  line-height: 160%;
  color: #1D1F22;
}

.PLP__cards {
  display: flex;
  /* justify-content: space-between; */
  flex-wrap: wrap;
}

.PLP__card {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin: 16px;
  width: 386px;
  height: 444px;
  background: #FFFFFF;
}

.PLP__cards_picture {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.PLP__cards_picture img {
  width: 350px;
  height: 330px;
  object-fit: contain;
  background-color: '#FFFFFF'
}

.PLP__card_description {
  padding: 16px;
  width: 100%;
}

.PLP_card_stock {
  font-family: Raleway;
  font-size: 24px;
  font-weight: 400;
  line-height: 38px;
  letter-spacing: 0px;
  text-align: center;
  position: relative;
  bottom: 175%;
}

.PDP__container {
  margin: 160px 101px;
  display: flex;
}

.PLP__card:hover {
  background: #FFFFFF;
  box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
}

.PLP__card img {
  max-width: 100%;
  padding: 16px;
}

.PDP__pictures_small {
  display: flex;
  flex-direction: column;
  row-gap: 1em;
}

.PDP__product_details {
  display: flex;
  flex-direction: column;
  width: 292px;
  margin: 0 90px;
}

.PDP__product_brand {
  font-size: 30px;
  font-weight: 600;
  line-height: 27px;
  letter-spacing: 0em;
  text-align: left;
}

.PDP__product_name {
  font-size: 30px;
  font-weight: 400;
  line-height: 27px;
  letter-spacing: 0em;
  text-align: left;
}

.PDP__product_attribute-name {
  font-family: Roboto Condensed;
  font-size: 18px;
  font-weight: 700;
  line-height: 18px;
  letter-spacing: 0em;
  text-align: left;
}

.PDP__product_attribute-items {
  display: flex;
  gap: 10px;
}

.PDP__product_attribute-item {
  display: flex;
  justify-content: center;
  align-items: center;
  letter-spacing: 0.05em;
  color: #292929;
  font-family: Source Sans Pro;
  font-size: 16px;
  font-weight: 400;
  line-height: 18px;
  letter-spacing: 0.05em;
}

.PDP__product_add-to-cart {
  padding: 16px 32px;
  width: 292px;
  height: 52px;
  background: #5ECE7B;
  color: #FFFFFF;
  border: none;
}

.PDP__product_attribute-price {
  font-family: Raleway;
  font-size: 24px;
  font-weight: 700;
  line-height: 18px;
  letter-spacing: 0em;
  text-align: left;
}

.navigation__cart {
  display: flex;
}

.navigation__cart_items {
  position: absolute;
  left: 49%;
  bottom: 20%;
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  font-size: 14px;
  line-height: 16px;
  border-radius: 50%;
  width: 14px;
  height: 14px;
  text-align: center;
  background-color: black;
  color: #FFFFFF;
  z-index: 5;

}

.PLP__card_button {
  position: relative;
  bottom: 100%;
  left: 75%;
  opacity: 0;
}

.PLP__card:hover .PLP__card_button {
  opacity: 1;
}

.PDP__product_stock {
  font-family: Raleway;
  font-size: 24px;
  font-weight: 400;
}

.PLP__card_brand-name:hover {
  cursor: pointer;
  text-decoration: underline;
  color: blue;
}

.smallCart {
  display: none;
  position: fixed;
  z-index: 1;
  margin-top: 85px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.4);
}

.smallCart__container {
  z-index: 99;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 16px;
  gap: 32px;

  position: absolute;
  right: 100px;
  width: 350px;
  height: 677px;

  background: #FFFFFF;
}

.smallCart__name {
  display: block;
  width: 325px;
  font-family: Raleway;
  font-size: 16px;
  font-weight: 700;
  line-height: 26px;
  letter-spacing: 0em;
  text-align: left;
}

.smallCart__item {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.smallCart__item p {
  margin: 8px 0;
}

.smallCart__item-title {
  font-family: Raleway;
  font-size: 16px;
  font-weight: 300;
  line-height: 26px;
  letter-spacing: 0px;
  text-align: left;
}

.smallCart__item-price,
.smallCart__item-amount {
  font-family: Raleway;
  font-size: 16px;
  font-weight: 600;
  line-height: 26px;
  letter-spacing: 0em;
  text-align: left;
}

.smallCart__item-amount {
  text-align: center;
}

.smallCart__attribute-name {
  font-family: Raleway;
  font-size: 14px;
  font-weight: 400;
  line-height: 16px;
  letter-spacing: 0px;
  text-align: left;
}

.smallCart__item-button {
  height: 24px;
  width: 24px;
  background-color: 'white';
  border: 1px solid #1D1F22;
}

.smallCart__attribute-items {
  display: flex;
}

.smallCart__attribute-item {
  font-family: Source Sans Pro;
  font-size: 14px;
  font-weight: 400;
  line-height: 22px;
  letter-spacing: 0em;
  text-align: center;
  margin: 0 2px;
}

.smallCart__item_main {
  width: 121px;
}

.smallCart__total {
  display: flex;
  justify-content: space-between;
  font-family: Roboto;
  font-size: 16px;
  font-weight: 500;
  line-height: 18px;
  letter-spacing: 0em;
  text-align: left;
}

.smallCart__button {
  height: 43px;
  width: 140px;
  left: 0px;
  top: 0px;
  border-radius: 0px;
  padding: 16px, 32px, 16px, 32px;
  margin-bottom: 16px;
}

.smallCart__button-bag {
  background: #FFFFFF;
  border: 1px solid #1D1F22;
  margin-right: 8px;
}

.smallCart__button-checkout {
  background: #5ECE7B;
  color: white;
  border: none
}

.Cart__container_name {
  font-family: Raleway;
  font-size: 32px;
  font-weight: 700;
  line-height: 40px;
  letter-spacing: 0em;
  text-align: left;
}

.Cart__item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 1240px;
  border-bottom: 1px solid #E5E5E5;
  border-top: 1px solid #E5E5E5;
  padding: 24px;
}

.Cart__item p {
  font-family: Raleway;
  font-size: 30px;
  line-height: 27px;
  letter-spacing: 0em;
  text-align: left;
  margin: 15px;
}

.Cart__item-brand {
  font-weight: 600;
}

.Cart__item-name {
  font-weight: 400;
}

.Cart__item-price {
  font-size: 24px;
  font-weight: 700;
  /* line-height: 24px; */
}

.Cart__attribute-name {
  font-family: Roboto Condensed;
  font-size: 18px;
  font-weight: 700;
  line-height: 18px;
  letter-spacing: 0em;
  text-align: center;
}

.Cart__attribute-items,
.Cart__item_actions {
  display: flex;
  margin: 15px;
}

.Cart__item_part {
  display: flex;
  flex-direction: column;
}

.Cart__item_picture--buttons {
  position: relative;
  top: -20%;
  display: flex;
  justify-content: flex-end;
}

.Cart__item_picture--button {
  height: 24px;
  width: 24px;
  background: rgba(0, 0, 0, 0.73);
  color: white;
  margin-right: 8px;
}

.Cart__item_buttons {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.Cart__item-button {
  height: 45px;
  width: 45px;
  left: 0px;
  top: 0px;
  border-radius: 0px;
  background-color: white;
  font-size: 24px;
}

.Cart__attribute-item {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 8px;
  font-family: Source Sans Pro;
  font-size: 16px;
  font-weight: 400;
  line-height: 18px;
  letter-spacing: 0.05em;
  text-align: center;
}

.Cart__total {
  display: flex;
  flex-direction: column;
  padding: 16px;
}

.Cart__total--part {
  display: flex;
  padding-right: 20px;
  width: 279px;
}

.Cart__total--part p {
  margin: 5px;
}

.Cart__total--part-one {
  font-family: Raleway;
  font-size: 24px;
  font-weight: 400;
  line-height: 28px;
  letter-spacing: 0em;
  text-align: left;
  width: 100px;
}

.Cart__total--part-two {
  font-family: Raleway;
  font-size: 24px;
  font-weight: 700;
  line-height: 28px;
  letter-spacing: 0em;
  text-align: left;
}

.Cart__button-order {
  width: 279px;
  height: 43px;
  background: #5ECE7B;
  border: none;
  padding: 16px 32px;
  color: white;
  font-family: Raleway;
  font-size: 14px;
  font-weight: 600;
  line-height: 17px;
  letter-spacing: 0em;
  text-align: center;
  text-transform: uppercase;
  margin-top: 15px;
  margin-bottom: 280px;
}

